emf-exa-parser/tests/snapshots/integration_tests__parse_exascaler_conf_from_file_test_ai400x.snap
---
source: emf-exa-parser/tests/integration-tests.rs
expression: exa

---
{
  "ha_settings": {
    "corosync_nics": [
      "ring0",
      "ring1"
    ],
    "crypto_cipher": "aes256",
    "crypto_hash": "sha1",
    "dampen_ifspeed": 20,
    "dampen_ping": 20,
    "failover_policy": "standard",
    "ha_group_count": 1,
    "ha_groups": [
      [
        "ai400x-7f94-vm00",
        "ai400x-7f94-vm01",
        "ai400x-7f94-vm02",
        "ai400x-7f94-vm03"
      ]
    ],
    "lustre_start_timeout": 450,
    "max_messages": 17,
    "mcastport": 5405,
    "netmtu": 1500,
    "no_quorum_policy": "freeze",
    "rrp_mode": "passive",
    "secauth": "on",
    "stonith_timeout": 60,
    "start_on_boot": true,
    "transport": "unicast",
    "type": "corosync",
    "window_size": 50,
    "zpool_monitor_timeout": 60
  },
  "global_settings": {
    "clients_list": [],
    "cluster_name": null,
    "conf_param_tunings": null,
    "email_list": [],
    "email_domain": null,
    "email_relay": null,
    "extra_hosts_start": [],
    "extra_hosts_end": [],
    "fs_list": [
      "ai400hyb"
    ],
    "host_list": [
      "ai400x-7f94-vm00",
      "ai400x-7f94-vm01",
      "ai400x-7f94-vm02",
      "ai400x-7f94-vm03"
    ],
    "hsm_active": false,
    "kdump_path": "/scratch/crash",
    "lnet_mr_fault_sensitive": false,
    "log_dir": "/scratch/log",
    "mdt_backup": "none",
    "mdt_backup_dir": "/scratch",
    "mgs_fs": "ai400hyb",
    "ntp_list": [],
    "password_policy": "plain-text",
    "pingd": true,
    "s2a_list": [],
    "s2a_pass": "password",
    "s2a_user": "admin",
    "set_param_tunings": {
      "obdfilter.*.brw_size": "16",
      "osd-ldiskfs.*.read_cache_enable": "0",
      "osd-ldiskfs.*.writethrough_cache_enable": "0"
    },
    "sfa_list": [
      "AI400X-7f94"
    ],
    "shadow_conf": false,
    "timezone": null,
    "vg_activation_list": [
      "auto"
    ]
  },
  "pool_settings": {},
  "sfa_settings": {
    "AI400X-7f94": {
      "controllers": [
        "10.0.3.1",
        "10.0.3.4"
      ],
      "name": "AI400X-7f94",
      "password": "user",
      "user": "user"
    }
  },
  "zpool_settings": null,
  "host_defaults_settings": {
    "base_ip": {},
    "bonding_mode": null,
    "grub_args": "spectre_v2=off nopti",
    "host_sfa_list": [
      "AI400X-7f94"
    ],
    "ipmi_delay": null,
    "ipmi_method": null,
    "ipmi_monitor": null,
    "ipmi_power_wait": 5,
    "lnets": [
      "o2ib0(ib0,ib1)"
    ],
    "modprobe_cfg": null,
    "rest_cert_ca": null,
    "rest_cert_crl": null,
    "rest_cert_server": null,
    "rest_cert_server_key": null,
    "rest_ext_nic": null,
    "rest_int_nic": null,
    "rest_keepalived_nic": null,
    "rest_primary_nic": null,
    "nic_list": [
      "mgmt0",
      "mgmt2",
      "ib0",
      "ib1"
    ],
    "nics": {
      "ib0": {
        "device": "ib0",
        "gateway": null,
        "ip": null,
        "is_bonded": null,
        "netaddr": null,
        "netmask": "255.255.0.0"
      },
      "ib1": {
        "device": "ib1",
        "gateway": null,
        "ip": null,
        "is_bonded": null,
        "netaddr": null,
        "netmask": "255.255.0.0"
      },
      "mgmt0": {
        "device": "mgmt0",
        "gateway": "10.36.0.1",
        "ip": null,
        "is_bonded": null,
        "netaddr": null,
        "netmask": "255.255.0.0"
      },
      "mgmt2": {
        "device": "mgmt2",
        "gateway": null,
        "ip": null,
        "is_bonded": null,
        "netaddr": null,
        "netmask": "255.255.255.0"
      }
    },
    "ring0": "mgmt2",
    "ring1": "ib0",
    "serial_port": "ttyS0",
    "serial_speed": "115200",
    "stonith_pass": null,
    "stonith_user": null,
    "stonith_type": "sfa_vm"
  },
  "hosts_settings": {
    "ai400x-7f94-vm00": {
      "fs_list": [
        "ai400hyb"
      ],
      "bonding_mode": null,
      "grub_args": "spectre_v2=off nopti",
      "ha_group": [
        "ai400x-7f94-vm00",
        "ai400x-7f94-vm01",
        "ai400x-7f94-vm02",
        "ai400x-7f94-vm03"
      ],
      "ha_group_idx": 0,
      "host_sfa_list": [
        "AI400X-7f94"
      ],
      "ipmi_delay": null,
      "ipmi_method": null,
      "ipmi_monitor": null,
      "ipmi_power_wait": 5,
      "lnet_members": {
        "o2ib0": [
          [
            "172.16.254.194",
            "172.16.255.194"
          ],
          [
            "172.16.254.195",
            "172.16.255.195"
          ],
          [
            "172.16.254.196",
            "172.16.255.196"
          ],
          [
            "172.16.254.197",
            "172.16.255.197"
          ],
          [
            "172.16.254.194",
            "172.16.255.194"
          ],
          [
            "172.16.254.195",
            "172.16.255.195"
          ],
          [
            "172.16.254.196",
            "172.16.255.196"
          ],
          [
            "172.16.254.197",
            "172.16.255.197"
          ]
        ]
      },
      "lnet_nics": [
        "ib0",
        "ib1"
      ],
      "lnets": [
        "o2ib0(ib0,ib1)"
      ],
      "mdt_base_device_paths": {
        "ai400hyb": "/dev/ddn"
      },
      "mdt_list": {
        "ai400hyb": [
          0
        ]
      },
      "modprobe_cfg": null,
      "name": "ai400x-7f94-vm00",
      "nic_list": [
        "mgmt0",
        "mgmt2",
        "ib0",
        "ib1"
      ],
      "nics": {
        "device": null,
        "gateway": null,
        "ip": null,
        "is_bonded": null,
        "netaddr": null,
        "netmask": null
      },
      "peers": [
        "ai400x-7f94-vm01",
        "ai400x-7f94-vm02",
        "ai400x-7f94-vm03"
      ],
      "oid": "0x10000000",
      "ost_device_paths": {
        "ai400hyb": "/dev/ddn"
      },
      "ost_list": {
        "ai400hyb": [
          0,
          1,
          8
        ]
      },
      "rest_cert_ca": null,
      "rest_cert_crl": null,
      "rest_ext_nic": null,
      "rest_int_nic": null,
      "rest_cert_server": null,
      "rest_cert_server_key": null,
      "rest_keepalived_nic": null,
      "rest_primary_nic": null,
      "ring0": "mgmt2",
      "ring1": "ib0",
      "serial_port": "ttyS0",
      "serial_speed": "115200",
      "stonith_pass": "user",
      "stonith_primary_peers": [],
      "stonith_secondary_peers": [],
      "stonith_type": "sfa_vm",
      "stonith_user": "user",
      "sysctl": {
        "net.ipv4.conf.all.arp_announce": "2",
        "net.ipv4.conf.all.arp_ignore": "1",
        "net.ipv4.conf.all.rp_filter": "0",
        "net.ipv4.conf.defalut.arp_announce": "2",
        "net.ipv4.conf.default.arp_ignore": "1",
        "net.ipv4.conf.default.rp_filter": "2",
        "vm.min_free_kbytes": "2097152"
      }
    },
    "ai400x-7f94-vm01": {
      "fs_list": [
        "ai400hyb"
      ],
      "bonding_mode": null,
      "grub_args": "spectre_v2=off nopti",
      "ha_group": [
        "ai400x-7f94-vm00",
        "ai400x-7f94-vm01",
        "ai400x-7f94-vm02",
        "ai400x-7f94-vm03"
      ],
      "ha_group_idx": 0,
      "host_sfa_list": [
        "AI400X-7f94"
      ],
      "ipmi_delay": null,
      "ipmi_method": null,
      "ipmi_monitor": null,
      "ipmi_power_wait": 5,
      "lnet_members": {
        "o2ib0": [
          [
            "172.16.254.194",
            "172.16.255.194"
          ],
          [
            "172.16.254.195",
            "172.16.255.195"
          ],
          [
            "172.16.254.196",
            "172.16.255.196"
          ],
          [
            "172.16.254.197",
            "172.16.255.197"
          ],
          [
            "172.16.254.194",
            "172.16.255.194"
          ],
          [
            "172.16.254.195",
            "172.16.255.195"
          ],
          [
            "172.16.254.196",
            "172.16.255.196"
          ],
          [
            "172.16.254.197",
            "172.16.255.197"
          ]
        ]
      },
      "lnet_nics": [
        "ib0",
        "ib1"
      ],
      "lnets": [
        "o2ib0(ib0,ib1)"
      ],
      "mdt_base_device_paths": {
        "ai400hyb": "/dev/ddn"
      },
      "mdt_list": {
        "ai400hyb": [
          1
        ]
      },
      "modprobe_cfg": null,
      "name": "ai400x-7f94-vm01",
      "nic_list": [
        "mgmt0",
        "mgmt2",
        "ib0",
        "ib1"
      ],
      "nics": {
        "device": null,
        "gateway": null,
        "ip": null,
        "is_bonded": null,
        "netaddr": null,
        "netmask": null
      },
      "peers": [
        "ai400x-7f94-vm00",
        "ai400x-7f94-vm03",
        "ai400x-7f94-vm02"
      ],
      "oid": "0x10008000",
      "ost_device_paths": {
        "ai400hyb": "/dev/ddn"
      },
      "ost_list": {
        "ai400hyb": [
          2,
          3,
          9
        ]
      },
      "rest_cert_ca": null,
      "rest_cert_crl": null,
      "rest_ext_nic": null,
      "rest_int_nic": null,
      "rest_cert_server": null,
      "rest_cert_server_key": null,
      "rest_keepalived_nic": null,
      "rest_primary_nic": null,
      "ring0": "mgmt2",
      "ring1": "ib0",
      "serial_port": "ttyS0",
      "serial_speed": "115200",
      "stonith_pass": "user",
      "stonith_primary_peers": [],
      "stonith_secondary_peers": [],
      "stonith_type": "sfa_vm",
      "stonith_user": "user",
      "sysctl": {
        "net.ipv4.conf.all.arp_announce": "2",
        "net.ipv4.conf.all.arp_ignore": "1",
        "net.ipv4.conf.all.rp_filter": "0",
        "net.ipv4.conf.defalut.arp_announce": "2",
        "net.ipv4.conf.default.arp_ignore": "1",
        "net.ipv4.conf.default.rp_filter": "2",
        "vm.min_free_kbytes": "2097152"
      }
    },
    "ai400x-7f94-vm02": {
      "fs_list": [
        "ai400hyb"
      ],
      "bonding_mode": null,
      "grub_args": "spectre_v2=off nopti",
      "ha_group": [
        "ai400x-7f94-vm00",
        "ai400x-7f94-vm01",
        "ai400x-7f94-vm02",
        "ai400x-7f94-vm03"
      ],
      "ha_group_idx": 0,
      "host_sfa_list": [
        "AI400X-7f94"
      ],
      "ipmi_delay": null,
      "ipmi_method": null,
      "ipmi_monitor": null,
      "ipmi_power_wait": 5,
      "lnet_members": {
        "o2ib0": [
          [
            "172.16.254.194",
            "172.16.255.194"
          ],
          [
            "172.16.254.195",
            "172.16.255.195"
          ],
          [
            "172.16.254.196",
            "172.16.255.196"
          ],
          [
            "172.16.254.197",
            "172.16.255.197"
          ],
          [
            "172.16.254.194",
            "172.16.255.194"
          ],
          [
            "172.16.254.195",
            "172.16.255.195"
          ],
          [
            "172.16.254.196",
            "172.16.255.196"
          ],
          [
            "172.16.254.197",
            "172.16.255.197"
          ]
        ]
      },
      "lnet_nics": [
        "ib0",
        "ib1"
      ],
      "lnets": [
        "o2ib0(ib0,ib1)"
      ],
      "mdt_base_device_paths": {
        "ai400hyb": "/dev/ddn"
      },
      "mdt_list": {
        "ai400hyb": [
          2
        ]
      },
      "modprobe_cfg": null,
      "name": "ai400x-7f94-vm02",
      "nic_list": [
        "mgmt0",
        "mgmt2",
        "ib0",
        "ib1"
      ],
      "nics": {
        "device": null,
        "gateway": null,
        "ip": null,
        "is_bonded": null,
        "netaddr": null,
        "netmask": null
      },
      "peers": [
        "ai400x-7f94-vm03",
        "ai400x-7f94-vm00",
        "ai400x-7f94-vm01"
      ],
      "oid": "0x10000001",
      "ost_device_paths": {
        "ai400hyb": "/dev/ddn"
      },
      "ost_list": {
        "ai400hyb": [
          4,
          5,
          10
        ]
      },
      "rest_cert_ca": null,
      "rest_cert_crl": null,
      "rest_ext_nic": null,
      "rest_int_nic": null,
      "rest_cert_server": null,
      "rest_cert_server_key": null,
      "rest_keepalived_nic": null,
      "rest_primary_nic": null,
      "ring0": "mgmt2",
      "ring1": "ib0",
      "serial_port": "ttyS0",
      "serial_speed": "115200",
      "stonith_pass": "user",
      "stonith_primary_peers": [],
      "stonith_secondary_peers": [],
      "stonith_type": "sfa_vm",
      "stonith_user": "user",
      "sysctl": {
        "net.ipv4.conf.all.arp_announce": "2",
        "net.ipv4.conf.all.arp_ignore": "1",
        "net.ipv4.conf.all.rp_filter": "0",
        "net.ipv4.conf.defalut.arp_announce": "2",
        "net.ipv4.conf.default.arp_ignore": "1",
        "net.ipv4.conf.default.rp_filter": "2",
        "vm.min_free_kbytes": "2097152"
      }
    },
    "ai400x-7f94-vm03": {
      "fs_list": [
        "ai400hyb"
      ],
      "bonding_mode": null,
      "grub_args": "spectre_v2=off nopti",
      "ha_group": [
        "ai400x-7f94-vm00",
        "ai400x-7f94-vm01",
        "ai400x-7f94-vm02",
        "ai400x-7f94-vm03"
      ],
      "ha_group_idx": 0,
      "host_sfa_list": [
        "AI400X-7f94"
      ],
      "ipmi_delay": null,
      "ipmi_method": null,
      "ipmi_monitor": null,
      "ipmi_power_wait": 5,
      "lnet_members": {
        "o2ib0": [
          [
            "172.16.254.194",
            "172.16.255.194"
          ],
          [
            "172.16.254.195",
            "172.16.255.195"
          ],
          [
            "172.16.254.196",
            "172.16.255.196"
          ],
          [
            "172.16.254.197",
            "172.16.255.197"
          ],
          [
            "172.16.254.194",
            "172.16.255.194"
          ],
          [
            "172.16.254.195",
            "172.16.255.195"
          ],
          [
            "172.16.254.196",
            "172.16.255.196"
          ],
          [
            "172.16.254.197",
            "172.16.255.197"
          ]
        ]
      },
      "lnet_nics": [
        "ib0",
        "ib1"
      ],
      "lnets": [
        "o2ib0(ib0,ib1)"
      ],
      "mdt_base_device_paths": {
        "ai400hyb": "/dev/ddn"
      },
      "mdt_list": {
        "ai400hyb": [
          3
        ]
      },
      "modprobe_cfg": null,
      "name": "ai400x-7f94-vm03",
      "nic_list": [
        "mgmt0",
        "mgmt2",
        "ib0",
        "ib1"
      ],
      "nics": {
        "device": null,
        "gateway": null,
        "ip": null,
        "is_bonded": null,
        "netaddr": null,
        "netmask": null
      },
      "peers": [
        "ai400x-7f94-vm02",
        "ai400x-7f94-vm01",
        "ai400x-7f94-vm00"
      ],
      "oid": "0x10008001",
      "ost_device_paths": {
        "ai400hyb": "/dev/ddn"
      },
      "ost_list": {
        "ai400hyb": [
          6,
          7,
          11
        ]
      },
      "rest_cert_ca": null,
      "rest_cert_crl": null,
      "rest_ext_nic": null,
      "rest_int_nic": null,
      "rest_cert_server": null,
      "rest_cert_server_key": null,
      "rest_keepalived_nic": null,
      "rest_primary_nic": null,
      "ring0": "mgmt2",
      "ring1": "ib0",
      "serial_port": "ttyS0",
      "serial_speed": "115200",
      "stonith_pass": "user",
      "stonith_primary_peers": [],
      "stonith_secondary_peers": [],
      "stonith_type": "sfa_vm",
      "stonith_user": "user",
      "sysctl": {
        "net.ipv4.conf.all.arp_announce": "2",
        "net.ipv4.conf.all.arp_ignore": "1",
        "net.ipv4.conf.all.rp_filter": "0",
        "net.ipv4.conf.defalut.arp_announce": "2",
        "net.ipv4.conf.default.arp_ignore": "1",
        "net.ipv4.conf.default.rp_filter": "2",
        "vm.min_free_kbytes": "2097152"
      }
    }
  },
  "rest_settings": null,
  "esui_settings": {
    "ip": "10.36.6.194",
    "cidr": 16,
    "size": "80G",
    "enabled": true,
    "nic": null
  },
  "fs_settings": {
    "ai400hyb": {
      "backfs": "ldiskfs",
      "cur_mdt_index": 4,
      "cur_ost_index": 0,
      "default_ost_count": 3,
      "default_mdt_count": 1,
      "dom_enabled": false,
      "dom_max_file_size": 65536,
      "host_list": [
        "ai400x-7f94-vm00",
        "ai400x-7f94-vm01",
        "ai400x-7f94-vm02",
        "ai400x-7f94-vm03"
      ],
      "hsm_active": false,
      "log_dir": "/scratch/log/ai400hyb",
      "mds_list": [
        "ai400x-7f94-vm00",
        "ai400x-7f94-vm01",
        "ai400x-7f94-vm02",
        "ai400x-7f94-vm03"
      ],
      "mdt_base_device_path": "/dev/ddn",
      "mdt_failback": true,
      "mdt_list": {
        "ai400x-7f94-vm00": [
          0
        ],
        "ai400x-7f94-vm01": [
          1
        ],
        "ai400x-7f94-vm02": [
          2
        ],
        "ai400x-7f94-vm03": [
          3
        ]
      },
      "mdt_mke2fs_opts": [
        "-m1",
        "-E",
        "lazy_itable_init=0,lazy_journal_init=0,nodiscard",
        "-O",
        "project"
      ],
      "mdt_mount_opts": "max_sectors_kb=0",
      "mgs_device_path": null,
      "mgs_list": [
        "ai400x-7f94-vm00",
        "ai400x-7f94-vm01"
      ],
      "mgt_mount_opts": "max_sectors_kb=0",
      "mdt_opts": "--param mdt.identity_upcall=NONE",
      "mdt_parts": null,
      "mdt_size": "90%",
      "mgs_failback": true,
      "mgs_internal": true,
      "mgs_size": "2G",
      "mgs_standalone": true,
      "mmp_update_interval": 5,
      "name": "ai400hyb",
      "oss_list": [
        "ai400x-7f94-vm00",
        "ai400x-7f94-vm01",
        "ai400x-7f94-vm02",
        "ai400x-7f94-vm03"
      ],
      "ost_device_path": "/dev/ddn",
      "ost_list": {
        "ai400x-7f94-vm00": [
          0,
          1,
          8
        ],
        "ai400x-7f94-vm01": [
          2,
          3,
          9
        ],
        "ai400x-7f94-vm02": [
          4,
          5,
          10
        ],
        "ai400x-7f94-vm03": [
          6,
          7,
          11
        ]
      },
      "ost_lnet_list": {},
      "ost_mke2fs_opts": [
        "-m1",
        "-i",
        "131072",
        "-E",
        "lazy_itable_init=0,lazy_journal_init=0,nodiscard",
        "-O",
        "project"
      ],
      "ost_mount_opts": "max_sectors_kb=0",
      "ost_opts": null,
      "pools": [],
      "total_mdt_count": 4,
      "total_ost_count": 12,
      "tune_ost_mke2fs_opts": [
        "for size > 140737488355328 apply '-E lazy_itable_init=1,nodiscard -N 1073741824 -O project'"
      ]
    }
  }
}
